--- a/VSCode html test.html
+++ b/VSCode html test.html
@@ -32,5 +32,6 @@
     <input id="invoerveld">
     <button onclick="mijnfunctie()">Klik hier</button>
     <div id="uitvoer"></div>
+    opmerking voor tweede commit
 </body>
 </html>
